--- a/catalog.html
+++ b/catalog.html
@@ -6,20 +6,20 @@
   </head>
   <body>
 <header class="header-main">
-<p class="header-logo"><a href="index.html><img src="https://via.placeholder.com/111x18" alt="Логотип «Техномарта»" width="111" height="18"></a></p>
+<p class="header-logo"><a href="index.html"><img src="https://via.placeholder.com/111x18" alt="Логотип «Техномарта»" width="111" height="18"></a></p>
 <!-- Здесь будет форма поиска -->
-<p class="header-bookmarks"><a href="#">Закладки: 0</a></p>
-<p class="header-cart active"><a href="#">Корзина: 10</a></p>
-<p class="header-order"><a href="#">Оформить заказ</a></p>
+<a class="header-bookmarks" href="#">Закладки: 0</a>
+<a class="header-cart active" href="#">Корзина: 10</a>
+<a class="header-order" href="#">Оформить заказ</a>
 <p class="header-description">Интернет-магазин<br>
 строительных материалов<br>
 и инструментов для ремонта</p>
 <div class="header-contacts">
-<span class="header-phone">+7 (812) 555-05-55</span>
+<a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
 <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 <div class="user-navigation">
-<p class="user-name">Равшан Джамшутович</p>
-<span class="user-logout"><a href="#">Выйти</a></span>
+<a href="user-profile.html" class="user-name">Равшан Джамшутович</a>
+<a class="user-logout" href="#">Выйти</a>
 <ul class="user-navigation-authorized">
 <li><a href="#">Мои заказы</a></li>
 <li><a href="#">Личный кабинет</a></li>
@@ -56,6 +56,10 @@
 	<li class="catalog-item">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 3000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -67,6 +71,10 @@
 	<li class="catalog-item">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 6000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -79,10 +87,10 @@
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 2000
 </h3></a>
-<p class="catalog-item-buttons">
+<div class="catalog-item-buttons">
 	<button class="catalog-item-order">Купить</button>
 	<button class="catalog-item-bookmark">В закладки</button>
-</p>
+</div>
 		<p class="catalog-item-price">
 		<span class="new-price">12500 Р.</span>
 		</p>
@@ -90,6 +98,10 @@
 	<li class="catalog-item">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 3000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -101,6 +113,10 @@
 	<li class="catalog-item catalog-item-new">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 6000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -113,6 +129,10 @@
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 2000
 </h3></a>
+<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -123,6 +143,10 @@
 	<li class="catalog-item catalog-item-new">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 3000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -134,6 +158,10 @@
 	<li class="catalog-item">
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 6000</h3></a>
+		<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
@@ -146,6 +174,10 @@
 	<a href="catalog-item.html">
 		<h3>Перфоратор BOSCH BFG 2000
 </h3></a>
+<div class="catalog-item-buttons">
+	<button class="catalog-item-order">Купить</button>
+	<button class="catalog-item-bookmark">В закладки</button>
+</div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
 		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
