--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <header class="header-main">
 <p class="header-logo"><img src="https://via.placeholder.com/111x18" alt="Логотип «Техномарта»" width="111" height="18"></p>
 <!-- Здесь будет форма поиска -->
-<p class="header-bookmarks"><a href="#">Закладки: 0</a></p>
-<p class="header-cart"><a href="#">Корзина: 0</a></p>
-<p class="header-order"><a href="#">Оформить заказ</a></p>
+<a class="header-bookmarks" href="#">Закладки: 0</a>
+<a class="header-cart active" href="#">Корзина: 0</a>
+<a class="header-order" href="#">Оформить заказ</a>
 <p class="header-description">Интернет-магазин<br>
 строительных материалов<br>
 и инструментов для ремонта</p>
 <div class="header-contacts">
-<span class="header-phone">+7 (812) 555-05-55</span>
+<a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
 <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p></div>
 <div class="user-navigation">
-<ul class="user-navigation-unauthorized"
+<ul class="user-navigation-unauthorized">
 <li><a href="#">Войти</a></li>
 <li><a href="#">Регистрация</a></li>
 </ul></div>
@@ -52,7 +52,7 @@
 		<p>Вы можете забрать товар сами, <br>
 заехав в наш офис:</p>
 <p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="https://via.placeholder.com/300x158" alt="Карта проезда" width="300" height="158"></a></p>
-<a href="#" class="button-contacts">Заблудились? Напишите нам!</a>
+<button href="#" class="button-contacts">Заблудились? Напишите нам!</button>
 	</section>
 </main>
 <footer class="footer-main">
