--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <header class="header-main">
-<p class="header-logo"><a href="index.html"><img src="https://via.placeholder.com/111x18" alt="Логотип «Техномарта»" width="111" height="18"></a></p>
+<p class="header-logo"><a href="index.html"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></a></p>
 <!-- Здесь будет форма поиска -->
 <a class="header-bookmarks" href="#">Закладки: 0</a>
 <a class="header-cart active" href="#">Корзина: 10</a>
@@ -62,7 +62,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">22500 Р.</span>
 		<span class="new-price">15500 Р.</span>
@@ -77,7 +77,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">30500 Р.</span>
 		<span class="new-price">25500 Р.</span>
@@ -91,6 +91,9 @@
 	<button class="catalog-item-order">Купить</button>
 	<button class="catalog-item-bookmark">В закладки</button>
 </div>
+<p class="catalog-item-image">
+              <a href="catalog-item.html">
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="new-price">12500 Р.</span>
 		</p>
@@ -104,7 +107,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">22500 Р.</span>
 		<span class="new-price">15500 Р.</span>
@@ -119,7 +122,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">30500 Р.</span>
 		<span class="new-price">25500 Р.</span>
@@ -135,7 +138,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="new-price">12500 Р.</span>
 		</p>
@@ -149,7 +152,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">22500 Р.</span>
 		<span class="new-price">15500 Р.</span>
@@ -164,7 +167,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="old-price">30500 Р.</span>
 		<span class="new-price">25500 Р.</span>
@@ -180,7 +183,7 @@
 </div>
 		<p class="catalog-item-image">
               <a href="catalog-item.html">
-		<img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
+		<img src="img/product-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a></p>
 		<p class="catalog-item-price">
 		<span class="new-price">12500 Р.</span>
 		</p>
@@ -190,7 +193,7 @@
 <!-- Здесь будут блоки, выделенные красным -->
 </main>
 <footer class="footer-main">
-<p class="footer-logo"><a href="index.html"><img src="https://via.placeholder.com/138x23" alt="Логотип «Техномарта" width="138" height="23"></a></p>	
+<p class="footer-logo"><a href="index.html"><img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23"></a></p>	
 <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
 +7 (812) 555-05-55
 </p>
