--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
 <header class="header-main">
-<p class="header-logo"><img src="https://via.placeholder.com/111x18" alt="Логотип «Техномарта»" width="111" height="18"></p>
+<p class="header-logo"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></p>
 <!-- Здесь будет форма поиска -->
 <a class="header-bookmarks" href="#">Закладки: 0</a>
 <a class="header-cart active" href="#">Корзина: 0</a>
@@ -51,12 +51,12 @@
 		<h2>Контакты</h2>
 		<p>Вы можете забрать товар сами, <br>
 заехав в наш офис:</p>
-<p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="https://via.placeholder.com/300x158" alt="Карта проезда" width="300" height="158"></a></p>
+<p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></p>
 <button href="#" class="button-contacts">Заблудились? Напишите нам!</button>
 	</section>
 </main>
 <footer class="footer-main">
-<p class="footer-logo"><img src="https://via.placeholder.com/138x23" alt="Логотип «Техномарта" width="138" height="23"></p>	
+<p class="footer-logo"><img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23"></p>	
 <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
 +7 (812) 555-05-55
 </p>
