--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<p>Вы можете забрать товар сами, <br>
 заехав в наш офис:</p>
 <p class="contacts-map"><a href="https://goo.gl/maps/KQanHvccPNP2" target="_blank"><img src="img/main-map.jpg" alt="Карта проезда" width="300" height="158"></a></p>
-<button href="#" class="button-contacts">Заблудились? Напишите нам!</button>
+<button class="button-contacts">Заблудились? Напишите нам!</button>
 	</section>
 </main>
 <footer class="footer-main">
