--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,10 @@
    <head>
       <meta charset="utf-8">
       <title>Перфораторы в интернет-магазине «Техномарт»</title>
+      <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+      <link href="css/normalize.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet" type="text/css">
    </head>
    <body>
       <header class="header-main">
