--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
    <head>
       <meta charset="utf-8">
       <title>HTML Academy: Техномарт</title>
+      <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
+      <link href="css/normalize.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
    </head>
    <body>
       <header class="header-main">
-         <p class="header-logo"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></p>
-         <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
-            <label for="search-field" class="visually-hidden">Поиск</label>
-            <input type="search" name="search" placeholder="Поиск:" id="search-field">
-         </form>
-         <a class="header-bookmarks" href="#">Закладки: 0</a>
-         <a class="header-cart active" href="#">Корзина: 0</a>
-         <a class="header-order" href="#">Оформить заказ</a>
+         <div class="header-top">
+            <p class="header-logo"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></p>
+            <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
+               <label for="search-field" class="visually-hidden">Поиск</label>
+               <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+            </form>
+            <div class="header-quicklinks">
+               <a class="header-bookmarks" href="#">Закладки: 0</a>
+               <a class="header-cart" href="#">Корзина: 0</a>
+               <a class="header-order" href="#">Оформить заказ</a>
+            </div>
+         </div>
          <p class="header-description">Интернет-магазин<br>
             строительных материалов<br>
             и инструментов для ремонта
@@ -24,8 +32,8 @@
          </div>
          <div class="user-navigation">
             <ul class="user-navigation-unauthorized">
-               <li><a href="#">Войти</a></li>
-               <li><a href="#">Регистрация</a></li>
+               <li><a href="#" class="user-button login-button">Войти</a></li>
+               <li><a href="#" class="user-button signup-button">Регистрация</a></li>
             </ul>
          </div>
          <nav class="main-menu">
@@ -83,25 +91,27 @@
             <li><a href="#">Инструмент</a></li>
             <li><a href="#">Спецпредложения</a></li>
          </ul>
-         <p class="footer-copyright">
-            © 2010–2017 Компания «Техномарт»<br>
-            Все права защищены
-         </p>
-         <div class="footer-social">
-            <ul>
-               <li><a class="social-button" href="#">Вконтакте</a></li>
-               <li><a class="social-button" href="#">Фейсбук</a></li>
-               <li><a class="social-button" href="#">Инстаграм</a></li>
-            </ul>
+         <div class="footer-bottom">
+            <p class="footer-copyright">
+               © 2010–2017 Компания «Техномарт»<br>
+               Все права защищены
+            </p>
+            <div class="footer-social">
+               <ul>
+                  <li><a class="social-button" href="#">Вконтакте</a></li>
+                  <li><a class="social-button" href="#">Фейсбук</a></li>
+                  <li><a class="social-button" href="#">Инстаграм</a></li>
+               </ul>
+            </div>
+            <p class="footer-feedback">
+               Обратная связь:<br>
+               <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="footer-developer">
+               Разработано —<br>
+               <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+            </p>
          </div>
-         <p class="footer-feedback">
-            Обратная связь:<br>
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-         </p>
-         <p class="footer-developer">
-            Разработано —<br>
-            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-         </p>
       </footer>
       <section class="modal modal-map">
          <h2 class="visually-hidden">
