Закончила стилизацию (шрифты) шапки и футера

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
    <body>
       <header class="header-main">
          <div class="header-top">
-            <p class="header-logo"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></p>
+            <p class="header-logo">
+               <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
+            </p>
             <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
                <label for="search-field" class="visually-hidden">Поиск</label>
                <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
@@ -30,8 +32,8 @@
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
          </div>
-         <div class="user-navigation">
-            <ul class="user-navigation-unauthorized">
+         <div class="user-navigation unauthorized">
+            <ul class="user-buttons">
                <li><a href="#" class="user-button login-button">Войти</a></li>
                <li><a href="#" class="user-button signup-button">Регистрация</a></li>
             </ul>
@@ -74,7 +76,9 @@
          </section>
       </main>
       <footer class="footer-main">
-         <p class="footer-logo"><img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23"></p>
+         <p class="footer-logo">
+            <img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23">
+         </p>
          <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7 (812) 555-05-55
          </p>
