--- a/catalog.html
+++ b/catalog.html
@@ -6,18 +6,26 @@
       <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700&amp;subset=cyrillic" rel="stylesheet">
       <link href="css/normalize.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet" type="text/css">
+      <link href="css/style.css" rel="stylesheet">
    </head>
    <body>
       <header class="header-main">
-         <p class="header-logo"><a href="index.html"><img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18"></a></p>
-         <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
-            <label for="search-field" class="visually-hidden">Поиск</label>
-            <input type="search" name="search" placeholder="Поиск:" id="search-field">
-         </form>
-         <a class="header-bookmarks" href="#">Закладки: 0</a>
-         <a class="header-cart active" href="#">Корзина: 10</a>
-         <a class="header-order" href="#">Оформить заказ</a>
+         <div class="header-top">
+            <p class="header-logo">
+               <a href="index.html">
+                  <img src="img/logo-header.svg" alt="Логотип «Техномарта»" width="111" height="18">
+               </a>
+            </p>
+            <form action="https://echo.htmlacademy.ru" method="get" class="search-form">
+               <label for="search-field" class="visually-hidden">Поиск</label>
+               <input type="search" name="search" placeholder="Поиск:" id="search-field" class="search-input">
+            </form>
+            <div class="header-quicklinks">
+               <a class="header-bookmarks" href="#">Закладки: 0</a>
+               <a class="header-cart active" href="#">Корзина: 10</a>
+               <a class="header-order" href="#">Оформить заказ</a>
+            </div>
+         </div>
          <p class="header-description">Интернет-магазин<br>
             строительных материалов<br>
             и инструментов для ремонта
@@ -26,10 +34,12 @@
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
             <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
          </div>
-         <div class="user-navigation">
-            <a href="user-profile.html" class="user-name">Равшан Джамшутович</a>
-            <a class="user-logout" href="#">Выйти</a>
-            <ul class="user-navigation-authorized">
+         <div class="user-navigation authorized">
+            <ul class="user-buttons">
+               <li><a href="user-profile.html" class="user-button name-button">Равшан Джамшутович</a></li>
+               <li><a class="user-button logout-button" href="#">Выйти</a></li>
+            </ul>
+            <ul class="personal-buttons">
                <li><a href="#">Мои заказы</a></li>
                <li><a href="#">Личный кабинет</a></li>
             </ul>
@@ -240,7 +250,11 @@
          <!-- Здесь будут блоки, выделенные красным -->
       </main>
       <footer class="footer-main">
-         <p class="footer-logo"><a href="index.html"><img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23"></a></p>
+         <p class="footer-logo">
+            <a href="index.html">
+               <img src="img/logo-footer.svg" alt="Логотип «Техномарта" width="138" height="23">
+            </a>
+         </p>
          <p class="footer-contacts">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
             +7 (812) 555-05-55
          </p>
@@ -257,25 +271,27 @@
             <li><a href="#">Инструмент</a></li>
             <li><a href="#">Спецпредложения</a></li>
          </ul>
-         <p class="footer-copyright">
-            © 2010–2017 Компания «Техномарт»<br>
-            Все права защищены
-         </p>
-         <div class="footer-social">
-            <ul>
-               <li><a class="social-button" href="#">Вконтакте</a></li>
-               <li><a class="social-button" href="#">Фейсбук</a></li>
-               <li><a class="social-button" href="#">Инстаграм</a></li>
-            </ul>
+         <div class="footer-bottom">
+            <p class="footer-copyright">
+               © 2010–2017 Компания «Техномарт»<br>
+               Все права защищены
+            </p>
+            <div class="footer-social">
+               <ul>
+                  <li><a class="social-button" href="#">Вконтакте</a></li>
+                  <li><a class="social-button" href="#">Фейсбук</a></li>
+                  <li><a class="social-button" href="#">Инстаграм</a></li>
+               </ul>
+            </div>
+            <p class="footer-feedback">
+               Обратная связь:<br>
+               <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </p>
+            <p class="footer-developer">
+               Разработано —<br>
+               <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
+            </p>
          </div>
-         <p class="footer-feedback">
-            Обратная связь:<br>
-            <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-         </p>
-         <p class="footer-developer">
-            Разработано —<br>
-            <a href="https://htmlacademy.ru/">htmlacademy.ru</a>
-         </p>
       </footer>
       <section class="modal modal-cart">
          <h2>Товар добавлен в корзину!</h2>
